// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroBanner should render with many props assigned 1`] = `
<section
  className="test-class HeroBanner"
  title="test-title"
>
  Test
</section>
`;

exports[`HeroBanner should render with required props 1`] = `
<section
  className="HeroBanner"
  title="test-title"
>
  Test
</section>
`;
